<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Angband</string>

    <string-array name="gamePluginDescriptions">
	  <item>Vanilla 3.2.0</item> 
      <item>Vanilla 3.0.6 squelch+borg</item>
      <item>Vanilla 2.4.Frog-knows</item>
      <item>Umoria 5.5.2</item>
      <item>Rogue Clone IV</item>
    </string-array>
    <string-array name="gamePluginNames">
      <item>angband</item> 
      <item>angband306</item>
      <item>frogknows</item>
      <item>moria</item>
      <item>rogue</item>
      <item>steam</item>
    </string-array>
    <string-array name="gamePlugins">
      <item>0</item>
      <item>1</item>
	  <item>2</item> 
	  <item>3</item> 
	  <item>4</item> 
	  <item>5</item> 
    </string-array>

    <string name="version">0.0.0.1</string>

    <string name="menu_preferences">Preferences</string>
    <string name="menu_profiles">Profiles</string>
    <string name="menu_help">Help</string>
    <string name="menu_quit">Quit</string>

    <string name="menu_profile_add">Edit Profile</string>

    <string name="angband_help">Angband Help</string>
    <string name="preferences">Preferences</string>
    <string name="profiles">Profiles</string>
    <string name="profileadd">New Profile</string>

    <string name="profile_name_caption">Name or description of profile</string>
    <string name="profile_savefile_caption">Filename for saved game</string>

    <string name="display_category">Display</string>
    <string name="control_category">Control</string>
    <string name="game_category">Game</string>

    <string name="description">Angband is a dungeon-crawling roguelike RPG game.</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preferences_vibrate_summary">Enable or disable vibration in game</string>
    <string name="preferences_fullscreen_title">Full screen</string>
    <string name="preferences_fullscreen_summary">Enable or disable game in full screen</string>
    <string name="preferences_orientation_title">Orientation</string>
    <string name="preferences_orientation_summary">Select screen orientation</string>
    <string name="preferences_gameplugin_title">Selected variant</string>
    <string name="preferences_gameplugin_summary">Select Angband variant to play</string>
    <string name="preferences_enablevkey_title">Enable virtual keyboard</string>
    <string name="preferences_enablevkey_summary">Display virtual keyboard (forces portrait orientation)</string>
    <string name="preferences_portraitkb_title">Portrait keyboard</string>
    <string name="preferences_portraitkb_summary">Display virtual keyboard in portrait orientation</string>
    <string name="preferences_landscapekb_title">Landscape keyboard</string>
    <string name="preferences_landscapekb_summary">Display virtual keyboard in landscape orientation</string>
    <string name="preferences_enablevolkeyfontsize_title">Volume key font sizing</string>
    <string name="preferences_enablevolkeyfontsize_summary">Font size changed by volume up &amp; down keys</string>
    <string name="preferences_enabletouch_title">Enable touch directionals</string>
    <string name="preferences_enabletouch_summary">Turn on touchscreen directional controls.</string>
    <string name="preferences_alwaysrun_title">Always run</string>
    <string name="preferences_alwaysrun_summary">Always run when using touch directional commands</string>

    <string name="preferences_skipwelcome_title">Skip welcome screen</string>
    <string name="preferences_skipwelcome_summary">Automatically skip the Angband welcome screen at startup.</string>

    <string name="preferences_autostartborg_title">Auto-start borg</string>
    <string name="preferences_autostartborg_summary">Automatically starts your borg (Vanilla 3.0.6 only)</string>

    <string-array name="orientationDescriptions">
      <item>Sensor</item>
	  <item>Portrait</item>
	  <item>Landscape</item>
    </string-array>
    <string-array name="orientations">
      <item>0</item>
      <item>1</item>
      <item>2</item>
    </string-array>

	<string-array name="keyActionDescriptions">
		<item>None</item>
		<item>Alt/Fn Key</item>
		<item>Ctrl Key</item>
		<item>Enter Key</item>
		<item>Esc Key</item>
		<item>Period</item>
		<item>Shift Key</item>
		<item>Space</item>
		<item>Virtual Keyboard</item>
		<item>Zoom In</item>
		<item>Zoom Out</item>
		<item>Forward to System</item>
	</string-array>
	<string-array name="keyActions">
		<item>None</item>
		<item>AltKey</item>
		<item>CtrlKey</item>
		<item>EnterKey</item>
		<item>EscKey</item>
		<item>Period</item>
		<item>ShiftKey</item>
		<item>Space</item>
		<item>VirtualKeyboard</item>
		<item>ZoomIn</item>
		<item>ZoomOut</item>
		<item>ForwardToSystem</item>
	</string-array>
</resources>
