<?xml version="1.0" encoding="UTF-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/game_category">
		<org.angdroid.angband.ProfileListPreference 
				android:title="@string/preferences_gameplugin_title"
				android:key="angband.gameplugin"
				android:summary="@string/preferences_gameplugin_summary"
				android:entries="@array/gamePluginDescriptions"
				android:entryValues="@array/gamePlugins" />
		<org.angdroid.angband.ProfileCheckBoxPreference 
				android:title="@string/preferences_skipwelcome_title"
				android:key="angband.skipwelcome"
				android:defaultValue="false" 
				android:summary="@string/preferences_skipwelcome_summary" />
		<org.angdroid.angband.ProfileCheckBoxPreference 
				android:title="@string/preferences_autostartborg_title"
				android:key="angband.autostartborg"
				android:defaultValue="false" 
				android:summary="@string/preferences_autostartborg_summary" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/display_category">
		<CheckBoxPreference 
			android:key="angband.vibrate"
			android:defaultValue="false" 
			android:title="@string/preferences_vibrate_title"
			android:summary="@string/preferences_vibrate_summary" />
		<CheckBoxPreference 
			android:key="angband.fullscreen"
			android:defaultValue="true" 
			android:title="@string/preferences_fullscreen_title"
			android:summary="@string/preferences_fullscreen_summary" />
		<ListPreference 
			android:key="angband.orientation"
			android:defaultValue="0" 
			android:title="@string/preferences_orientation_title"
			android:summary="@string/preferences_orientation_summary" 
		    android:entries="@array/orientationDescriptions"
		    android:entryValues="@array/orientations" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/control_category">
		<PreferenceScreen
			android:title="Hardware Key Binding (take 2)"
			android:summary="Configure hardware buttons on your device to perform various functions">	  
		<PreferenceScreen
			android:title="Symbols"
			android:summary="Punctuation and other non-alpha numeric keys">	  
		  <org.angdroid.angband.KeyBindPreference android:key="angband.astkey" android:title="Asterisk *"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.atkey" android:title="At @"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.bslashkey" android:title="Back Slash \\"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.colonkey" android:title="Colon :"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.commakey" android:title="Comma ,"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.dollarkey" android:title="Dollar $"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.dquotekey" android:title="Double Quote &quot;"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.equalkey" android:title="Equals ="/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.exclkey" android:title="Exclamation !"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.fslashkey" android:title="Forward Slash /"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.gtkey" android:title="Greater Than &gt;"/> 
		  <org.angdroid.angband.KeyBindPreference android:key="angband.lbkey" android:title="Left Brace ["/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.lckey" android:title="Left Curly {"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.lpkey" android:title="Left Paren ("/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.ltkey" android:title="Less Than &lt;"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.minuskey" android:title="Minus -"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.percentkey" android:title="Percent %"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.periodkey" android:title="Period ."/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.pipekey" android:title="Pipe |"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.pluskey" android:title="Plus +"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.poundkey" android:title="Pound #"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.lbkey" android:title="Right Brace ["/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.rpkey" android:title="Right Paren )"/>	
		  <org.angdroid.angband.KeyBindPreference android:key="angband.rckey" android:title="Right Curly }"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.scolonkey" android:title="Semicolon ;"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.squotekey" android:title="Single Quote '"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.tildekey" android:title="Tilde ~"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.underkey" android:title="Underscore _"/>
		</PreferenceScreen>
		<PreferenceScreen
			android:title="Modifiers and Movers"
			android:summary="Esc, Ctrl, Shift, Alt, Space, Enter, Directions">	  
		  <org.angdroid.angband.KeyBindPreference android:key="angband.altkey" android:title="Alt/Fn Key"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.downkey" android:title="Arrow Down"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.leftkey" android:title="Arrow Left"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.rightkey" android:title="Arrow Right"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.upkey" android:title="Arrow Up"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.bkspacekey" android:title="Backspace"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.ctrlkey" android:title="Control Key"/> 
		  <org.angdroid.angband.KeyBindPreference android:key="angband.enterkey" android:title="Enter Key"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.esckey" android:title="Esc Key"/> 
		  <org.angdroid.angband.KeyBindPreference android:key="angband.shiftkey" android:title="Shift Key"/>
		  <org.angdroid.angband.KeyBindPreference android:key="angband.spacekey" android:title="Space"/>
		</PreferenceScreen>
		<PreferenceScreen
			android:title="Other Functions"
			android:summary="Change display, font size, virtual keyboard">	  
		  <org.angdroid.angband.KeyBindPreference android:key="angband.virtkeykey" android:title="Toggle Virtual Keyboard"/> 
		  <org.angdroid.angband.KeyBindPreference android:key="angband.zoominkey" android:title="Zoom In"/> 
		  <org.angdroid.angband.KeyBindPreference android:key="angband.zoomoutkey" android:title="Zoom Out"/> 
		</PreferenceScreen>
		  <org.angdroid.angband.KeyBindResetPreference 
			 android:key="angband.resetallkeys" 
			 android:title="Reset all keys"
			 android:summary="Restores all key mappings back to the default configuration"/> 
		</PreferenceScreen>
		<PreferenceScreen
			android:title="Hardware Key Binding"
			android:summary="Configure hardware buttons on your device to perform various functions">
			<ListPreference
				android:title="Back Button"
				android:summary="Select functionality for Back button"
				android:key="angband.backbutton"
				android:defaultValue="EscKey"
				android:entries="@array/keyActionDescriptions"
				android:entryValues="@array/keyActions"/>
			<ListPreference
				android:title="Camera Button"
				android:summary="Select functionality for Camera button"
				android:key="angband.camerabutton"
				android:defaultValue="VirtualKeyboard"
				android:entries="@array/keyActionDescriptions"
				android:entryValues="@array/keyActions"/>
			<ListPreference
				android:title="Ctrl Key Double-Tap"
				android:summary="Affects all hardware buttons mapped to the Ctrl Key function"
				android:key="angband.ctrldoubletap"
				android:defaultValue="EnterKey"
				android:entries="@array/keyActionDescriptions"
				android:entryValues="@array/keyActions"/>
			<ListPreference
				android:title="DPAD/Trackball Button"
				android:summary="Select functionality for DPAD/Trackball button"
				android:key="angband.dpadbutton"
				android:defaultValue="CtrlKey"
				android:entries="@array/keyActionDescriptions"
				android:entryValues="@array/keyActions"/>
			<ListPreference
				android:title="Emoticon Key"
				android:summary="Select functionality for Emoticon Key (Samsung Epic 4G)"
				android:key="angband.emoticonkey"
				android:defaultValue="CtrlKey"
				android:entries="@array/keyActionDescriptions"
				android:entryValues="@array/keyActions"/>
			<ListPreference
				android:title="Menu Button"
				android:summary="Select functionality for Menu button"
				android:key="angband.menubutton"
				android:defaultValue="ForwardToSystem"
				android:entries="@array/keyActionDescriptions"
				android:entryValues="@array/keyActions"/>
			<ListPreference
				android:title="Search Button"
				android:summary="Select functionality for Search button"
				android:key="angband.searchbutton"
				android:defaultValue="CtrlKey"
				android:entries="@array/keyActionDescriptions"
				android:entryValues="@array/keyActions"/>
			<ListPreference
				android:title="Left Alt/Fn Key"
				android:summary="Select functionality for Left Alt/Fn key"
				android:key="angband.leftaltkey"
				android:defaultValue="AltKey"
				android:entries="@array/keyActionDescriptions"
				android:entryValues="@array/keyActions"/>
			<ListPreference
				android:title="Right Alt/Fn Key"
				android:summary="Select functionality for Right Alt/Fn key"
				android:key="angband.rightaltkey"
				android:defaultValue="AltKey"
				android:entries="@array/keyActionDescriptions"
				android:entryValues="@array/keyActions"/>
			<ListPreference
				android:title="Left Shift Key"
				android:summary="Select functionality for Left Shift key"
				android:key="angband.leftshiftkey"
				android:defaultValue="ShiftKey"
				android:entries="@array/keyActionDescriptions"
				android:entryValues="@array/keyActions"/>
			<ListPreference
				android:title="Right Shift Key"
				android:summary="Select functionality for Right Shift key"
				android:key="angband.rightshiftkey"
				android:defaultValue="ShiftKey"
				android:entries="@array/keyActionDescriptions"
				android:entryValues="@array/keyActions"/>
			<ListPreference
				android:title="Volume Up Button"
				android:summary="Select functionality for Volume Up button"
				android:key="angband.volumeupbutton"
				android:defaultValue="ZoomIn"
				android:entries="@array/keyActionDescriptions"
				android:entryValues="@array/keyActions"/>
			<ListPreference
				android:title="Volume Down Button"
				android:summary="Select functionality for Volume Down button"
				android:key="angband.volumedownbutton"
				android:defaultValue="ZoomOut"
				android:entries="@array/keyActionDescriptions"
				android:entryValues="@array/keyActions"/>

		</PreferenceScreen>
	  <CheckBoxPreference 
		 android:key="angband.portraitkb"
		 android:title="@string/preferences_portraitkb_title"
		 android:summary="@string/preferences_portraitkb_summary"
		 android:defaultValue="true"/>
	  <CheckBoxPreference 
		 android:key="angband.landscapekb"
		 android:title="@string/preferences_landscapekb_title"
		 android:summary="@string/preferences_landscapekb_summary"
		 android:defaultValue="false"/>
	  <CheckBoxPreference 
		 android:key="angband.enabletouch"
		 android:defaultValue="true" 
		 android:title="@string/preferences_enabletouch_title"
		 android:summary="@string/preferences_enabletouch_summary" />
	  <CheckBoxPreference 
		 android:key="angband.alwaysrun"
		 android:defaultValue="true" 
		 android:title="@string/preferences_alwaysrun_title"
		 android:summary="@string/preferences_alwaysrun_summary" 
		 android:dependency="angband.enabletouch" />
	  <ListPreference
		 android:title="Center Screen Tap"
		 android:summary="Select functionality for center screen tap"
		 android:key="angband.centerscreentap"
		 android:defaultValue="Space"
		 android:dependency="angband.enabletouch"
		 android:entries="@array/keyActionDescriptions"
		 android:entryValues="@array/keyActions"/>

	</PreferenceCategory>
</PreferenceScreen>
